# GEO-SEO-Domination-Tool

./: .dockerignore  .env.docker.example  .env.example  .env.local.example  .env.notifications.example  .eslintrc.json  .gitignore  .gitmodules  .mcp.json  .nextignore  .production-readiness-check.js  .production-readiness-status.json  .vercelignore  00_AUTH_TESTING_INDEX.md  02-GAP-ANALYSIS.md  03-DELIVERY-PLAN.md  117_POINT_PRODUCTION_IMPLEMENTATION_PLAN.md  ACTUAL_500_ERROR_FIX.md  AHREFS_COMPLETE_SYSTEM.md  AHREFS_FEATURE_ROADMAP.md  AHREFS_INTEGRATION_COMPLETE.md  AHREFS_INTEGRATION_STRATEGY.md  AHREFS_SYSTEM_READY.md  AI_DEV_TASKS_SETUP_COMPLETE.md  AI_INTEGRATION_TEST_RESULTS.md  ANTHROPIC_API_KEY_FIXED.md  ANTHROPIC_API_KEY_ISSUE.md  API_CONNECTION_ANALYSIS.md  API_HEALTH_REPORT.json  API_INTEGRATION_GUIDE.md  API_INTEGRATION_SETUP_GUIDE.md  API_INTEGRATION_UPDATES.md  API_ISSUE_RESOLUTION_SUMMARY.md  API_KEYS_SETUP_SUMMARY.md  API_KEY_FIX_SUMMARY.md  AUDIT_FIX_SUMMARY.md  AUDIT_SUMMARY.md  AUDIT_SYSTEM_VERIFIED_WORKING.md  AUTHENTICATION_COMPLETE.md  AUTHENTICATION_FINAL_STATUS.md  (+405 more)
.analysis/: 117-POINT-IMPLEMENTATION-PLAN.md  COMPLETE-ONBOARDING-FIX-SUMMARY.md  GMB_OAUTH_SECURITY_WARNING.md  GMB_OAUTH_TEST_RESULTS.md  GOOGLE-API-KEY-FIX-SUMMARY.md  MORNING-SUMMARY.md  ONBOARDING-FIXED-COMPLETE.md  ONBOARDING-VERIFICATION-PROTOCOL.md  USER-TESTING-GUIDE.md  (+17 more)
mcp-servers/seo-toolkit/: .env.example  INTEGRATION_GUIDE.md  QUICK_START.md  README.md  claude_desktop_config.example.json  pyproject.toml  requirements.txt  server.py  setup.bat  setup.sh  test_server.py
(+1613 files in other folders)
