[project]
name = "seo-toolkit-mcp"
version = "1.0.0"
description = "Comprehensive SEO analysis MCP server for Claude Desktop"
authors = [
    { name = "GEO-SEO Domination Tool", email = "support@geoseodomination.com" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501", # line too long (handled by black)
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
